policies/custom/clamav/allow-freshclam-updates.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-freshclam-dns-updates
  namespace: clamav
spec:
  podSelector:
    matchLabels:
      app: clamav
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to: 
    - ipBlock:
        cidr: 104.18.203.90/32
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
